fix sort button width on mobile view

--- a/app/frontend/styles/components/modal_dialogue.scss
+++ b/app/frontend/styles/components/modal_dialogue.scss
@@ -125,7 +125,7 @@ $govuk-modal-wide-breakpoint: $govuk-page-width + $govuk-modal-margin * 2 + $gov
 }
 
 .gem-c-modal-dialogue__confirm-link,
-.gem-c-modal-dialogue__close-link, {
+.gem-c-modal-dialogue__close-link {
   margin-bottom: govuk-spacing(3);
 }
 
