--- a/app/frontend/styles/components/sortable_links.scss
+++ b/app/frontend/styles/components/sortable_links.scss
@@ -31,6 +31,10 @@
 
   form {
     display: inline-block;
+
+    @include govuk-media-query($until: tablet) {
+      width: 100%;
+    }
   }
 }
 
